finished basic calculator

--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
         </div>
         <div class="numPad">
             <div class="section1"> 
-                <button>MC</button>
+                <button class="delete">MC</button>
                 <button>M+</button>
                 <button class="operator">%</button>
                 <button class="operator">x</button>
@@ -46,7 +46,7 @@
                 </div>
             
                 <div class="equalButton">
-                    <button class="operator">=</button>
+                    <button class="equalButtonBtn">=</button>
                 </div>
                 
             </div> 
