added dot and rounding

--- a/calculator.html
+++ b/calculator.html
@@ -41,7 +41,7 @@
                     </div>
                     <div>
                         <button class="number">0</button>
-                        <button>.</button>
+                        <button class="dotBtn">.</button>
                     </div>
                 </div>
             
